syntax = "proto3";

import "common.proto";

package dns;

message ZoneConfigPb {
  common.UUID id = 1;
  string origin = 2;
  uint32 ttl = 3;
  repeated string records = 4;
  repeated string forwarders = 5;
}

message GetExportConfigRequest {}

message GetExportConfigResponse {
  repeated ZoneConfigPb zones = 1;
  string fqdn = 2;
}

service DnsPeerManagerRpc {
    rpc GetExportConfig(GetExportConfigRequest) returns (GetExportConfigResponse) {}
}

message DnsSnapshot {
  repeated ZoneConfigPb zones = 1;
  repeated common.SocketAddr addresses = 2;
  repeated common.Url listeners = 3;
}

message HeartbeatRequest {
  common.UUID id = 1;
  bytes digest = 2;
  optional DnsSnapshot snapshot = 3;
}

message HeartbeatResponse {
  bool resync = 1;
}

service DnsServerRpc {
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}
}
